--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,13 +2,12 @@
 service: dvrsly
 
 # Name of the container image.
-image: your-user/dvrsly
+image: smhauck/dvrsly
 
 # Deploy to these servers.
 servers:
   web:
-    # - 192.168.0.1
-    - 0.0.0.0
+    - 167.172.247.156
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -20,13 +19,11 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: www.dvrsly.com
 
 # Credentials for your image host.
 registry:
-  # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: smhauck
 
   # Always use an access token rather than real password when possible.
   password:
@@ -66,7 +63,8 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "dvrsly_storage:/rails/storage"
+  - "/storage:/rails/storage"
+
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
