--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
     "@popperjs/core": "^2.11.8",
+    "@rails/actiontext": "^8.0.200",
     "autoprefixer": "^10.4.21",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "trix": "^2.1.13"
   },
   "browserslist": [
     "defaults"
