--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.21",
     "bootstrap-icons": "^1.11.3",
     "bulma": "^1.0.4",
+    "ffmpeg": "^0.0.4",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
