new storage naming convention

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -65,7 +65,7 @@ aliases:
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
   # - "/storage:/rails/storage"
-  - "/storage_dvrsly:/rails/storage"
+  - "/dvrsly_storage:/rails/storage"
 
 
 
