--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "private": true,
   "devDependencies": {
-    "esbuild": "^0.25.1"
+    "esbuild": "^0.25.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
@@ -20,13 +20,16 @@
     "bootstrap-icons": "^1.11.3",
     "bulma": "^1.0.4",
     "ffmpeg": "^0.0.4",
+    "import": "^0.0.6",
     "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
     "sass": "^1.85.1",
+    "theme-change": "^2.5.0",
     "trix": "^2.1.13"
   },
   "browserslist": [
     "defaults"
-  ]
+  ],
+  "version": "0.0.0"
 }
