--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -50,7 +50,7 @@ env:
     # DB_HOST: 192.168.0.2
 
     # Log everything from Rails
-    RAILS_LOG_LEVEL: "debug"
+    RAILS_LOG_LEVEL: debug
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
